add new feature for adding meeting - make relation between bonus and meeting add email - rememer me